# smartthings-api-extractor

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/scripts/: extract_smartthings_history.py
test_venv/: pyvenv.cfg
